# OpenMakaEngine

./: .gitignore  CMakeLists.txt  OpenMakaEngine.sln  README.md
OpenMakaEngine/: OpenMakaEngine.cpp  OpenMakaEngine.vcxproj  OpenMakaEngine.vcxproj.filters  ReadMe.txt  SingleTask.cpp  stdafx.cpp
config/: config.xml
src/: App.cpp  native_logger.h
src/Application/: Controller.cpp  Controller.h  androidbuf.h
src/Application/Helper/: Drawer.cpp  Drawer.h  Geometry.cpp  Geometry.h  Int2SizeType.h  Statistics.cpp  Timer.cpp
src/Application/Recognition/: Analyzer.cpp  Analyzer.h  ObjectPattern.cpp  SceneFrame.cpp
src/Application/Tracker/: Tracker.cpp
src/Application/akaze/: AKAZE.cpp  akaze_features.cpp  akaze_fed.cpp  akaze_nldiffusion_functions.cpp  akaze_utils.cpp
test-results/: statistics.csv
